--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "homepage": "http://Akmaral-mayer.github.io/reactive-todo",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "classnames": "^2.2.6",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
